# court-vision-predictor

./: .claudeignore  .dockerignore  .env.example  .gitignore  .railwayignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.cv  Dockerfile.dashboard  Dockerfile.full  Dockerfile.live_v2  Dockerfile.predictor  LICENSE  Makefile  PREDICTIONS_QUICKSTART.md  Procfile  README.md  VISION.md  conftest.py  docker-compose.yml  example_lines.csv  fly.toml  go.bat  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  requirements-live-v2.txt  requirements-predictor.txt  requirements-web.txt  requirements.txt  run_cv_wf.bat  start.sh
.github/: CODEOWNERS  pull_request_template.md
api/: README.md  _courtvision_data.py  _courtvision_form.py  _courtvision_live.py  _courtvision_middleware.py  _courtvision_odds.py  _deeplinks.py  _predictions_overlay.py  _risk_router.py  _team_colors.py  clv_router.py  courtvision_router.py  dashboard_router.py  devig_router.py  execution_router.py  lines_router.py  live_game_router.py  live_v2_app.py  main.py  models_router.py  predictions_router.py  scraper_probe.py  stitch_router.py
config/: betting.yaml  exclusion_list.yaml  strategy_d.yaml  strategy_d.yaml.iter18_proposed  tracker_params.json
data/: README.md  jersey_name_map.json  team_colors.json
database/: bet_db.py  schema_v2.sql
docs/: API.md  BETTING.md  CEILING.md  CV_TRACKING.md  DATA.md  DATA_OUTPUTS.md  DEMO.md  DEPLOY_RAILWAY.md  EXECUTION_GUIDE.md  FRONTEND_OVERVIEW.md  INTELLIGENCE.md  JOB_EVIDENCE_PACKET.md  KNOWN_LIMITATIONS.md  LIVE_ENGINE_V2.md  LIVE_ENGINE_V2_WEB.md  LIVE_OPERATOR_RUNBOOK.md  MEMORY_GRAPH.md  ML_MODELS.md  PLATFORM.md  PLATFORM_TOOLING.md  PLAYER_INTELLIGENCE.md  PREDICTOR_PLATFORM.md  PREDICTOR_QUICKSTART.md  PRODUCTION_RUNBOOK.md  PRODUCT_ONE_PAGER.md  PROJECT_INDEX.md  PROOFS.md  PUBLIC_EVIDENCE.md  ROADMAP.md  START_HERE.md  SYSTEM_OVERVIEW.md  WORLD_CLASS_CASE.md  architecture.md  backtest-methodology.md  daily_workflow_cron.md  data_schema.md  decisions.md  experiments.md  improvements.md  label_strategy.md  (+7 more)
domains/: __init__.py
intel/: __init__.py  player_archetype_classification.py  player_catch_shoot_vs_pullup.py  player_clutch_scoring.py  player_consistency_variance.py  player_defensive_profile.py  player_durability_load.py  player_form_streak_dynamics.py  player_foul_drawing.py  player_foul_tendency.py  (+39 more)
(+4055 files in other folders)
